--- a/Curso-JS/Aulas/casting-tipos.html
+++ b/Curso-JS/Aulas/casting-tipos.html
@@ -10,7 +10,8 @@
 
         //Convertendo para Inteiro
 
-        /*var num1 = prompt('Digite um valor; ');
+        /*
+        var num1 = prompt('Digite um valor; ');
 
         var num2 = prompt('Digite outro valor: ');
 
