--- a/Curso-JS/Aulas/DOM/manipula-cor-class-Dom.html
+++ b/Curso-JS/Aulas/DOM/manipula-cor-class-Dom.html
@@ -25,9 +25,9 @@
 
     <script>
     
-        function mudarClasse() {
+        function mudarClasse( ) {
 
-            document.getElementById(' mudarCor ').className = 'estilo2';//Para pegar um valor da Classe utiliza-se a propriedade ClassName passando o valor da classe a ser trocada, no caso a case estilo2
+            document.getElementById('mudarCor').className = 'estilo2';//Para pegar um valor da Classe utiliza-se a propriedade ClassName passando o valor da classe a ser trocada, no caso a case estilo2
         }
     
     </script>
@@ -38,6 +38,6 @@
     <div id="mudarCor" class="estilo1" >Mudando a Cor</div>
     <hr>
 
-    <button onclick="mudarClasse()">Aplicar Mudança</button>
+    <button type="button" onclick="mudarClasse()">Aplicar Mudança</button>
 </body>
 </html>
