--- a/Curso-JS/JS-ECMAScript6/Orientação a Objeto/OO_pilarAbistração2.html
+++ b/Curso-JS/JS-ECMAScript6/Orientação a Objeto/OO_pilarAbistração2.html
@@ -20,23 +20,23 @@
             }
 
             depositar(valorDeposito) {
-                this.saldo = saldo + valorDeposito
+                this.saldo = saldo + valorDeposito;
             }
 
             sacar(saqueValor) {
-                this.sald = sald - saqueValor
+                this.sald = sald - saqueValor;
             }
 
             consultarSaldo() {
-                return this.saldo
+                return this.saldo;
             }
 
         }
 
         let x = new ContaBancaria();
-        x.depositar = 400;
+        x.depositar = 400
         
-        console.log(x.consultarSaldo())
+        console.log(x.consultarSaldo());
 
     </script>
 
